2017-06-15  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.2.5-rc3.
	* doc/version.texi: version 6.2.5-rc3.
	* po/POTFILES.in: add pgn.cc.
	* po/gnuchess.pot: regenerated translatable strings.
	* src/frontend/cmd.cc: fix translatable string.

2017-06-12  Antonio Ceballos  <aceballos@gmail.com>

	* AUTHORS: several fixes and small enhancements.
	* TODO: several fixes and small enhancements.
	* NEWS: version 6.2.5-rc2.
	* doc/version.texi: version 6.2.5-rc2.
	* configure.ac: version 6.2.5-rc2.
	* po/eo.po: updated translation.
	* ChangeLog: merge branches/readline.
	* src/main.cc: merge branches/readline.
	* src/components.cc: merge branches/readline.
	* src/components.h: merge branches/readline.
	* src/config.h.in: merge branches/readline.
	* src/frontend/input.cc: merge branches/readline.
	* src/frontend/output.cc: merge branches/readline.
	* src/frontend/cmd.cc: merge branches/readline.
	* src/frontend/engine.cc: merge branches/readline.
	* src/frontend/Makefile.am: merge branches/readline.
	* src/frontend/common.h: merge branches/readline.
	* src/frontend/common.h: merge branches/readline.
	* src/frontend/output.cc: merge branches/readline.
	* src/frontend/pgn.cc: merge branches/readline.
	* test/commands: merge branches/readline.
	* test/commands/Polgar-Karpov.pgn: merge branches/readline.
	* test/commands/smallbook.bin: merge branches/readline.
	* test/commands/Polgar-Karpov.epd: merge branches/readline.
	* test/commands/gnuchess.ini: merge branches/readline.
	* test/commands/test_command.tcl: merge branches/readline.

2017-06-11  Pranav Deshpande <deshpande.v.pranav@gmail.com>

	* src/main.cc: show coordinates.
	* src/frontend/common.h: show coordinates mode.
	* src/frontend/output.cc: show coordinates if coords mode enabled.
	* src/frontend/pgn.cc: command 'pgnsave' will not append; instead,
	the user will be asked to overwrite or not.
	* src/frontend/engine.cc: do not print time limit.